testsuite/escript/for/foreach19-over-method-call-result-disallowed.err
foreach19-over-method-call-result-disallowed.src:5:15: error: mismatched input '.' expecting 'endforeach'