testsuite/escript/for/foreach19-over-method-call-result-disallowed.src
// The original compiler does not allow the result of a method call
// in a foreach iteration expression
var x := struct { a := "1", b := "2", c := "z" };

foreach a in x.keys()
    print(a);
endforeach
